fix: chat text wraping

--- a/style.css
+++ b/style.css
@@ -785,6 +785,14 @@ video {
   overflow-y: auto;
 }
 
+.text-wrap {
+  text-wrap: wrap;
+}
+
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
